--- a/shells/web/src/styles.css
+++ b/shells/web/src/styles.css
@@ -143,7 +143,7 @@ textarea:not([rows]) {
 html,
 body {
   overscroll-behavior-y: none;
-  /* overflow: hidden; */ /* Causing issues with Android WebView */
+  overflow: visible;
   height: 100%;
 }
 #app {
